# mc-wallet

./: LICENSE  README.md  mc-wallet.code-workspace
mc-wallet-fabric/: .gitignore  build.gradle  gradle.properties
mc-wallet-fabric/src/main/java/dev/mucks/mc_wallet/: McWallet.java  McWalletClient.java  McWalletDataGenerator.java  McWalletMod.java  McWalletModDataGenerator.java
mc-wallet-fabric/src/main/java/dev/mucks/mc_wallet/gui/: CoinType.java  CoinTypeOptionGui.java  CreateAccountGui.java  CreateWalletGui.java  McWalletGui.java  McWalletScreen.java  UnlockWalletGui.java  ViewSeedPhraseGui.java  WalletGui.java
mc-wallet-fabric/src/main/java/dev/mucks/mc_wallet/item/: McWalletItem.java  ModItemGroup.java  ModItems.java
mc-wallet-fabric/src/main/java/dev/mucks/mc_wallet/item/client/: McWalletItem.java
mc-wallet-fabric/src/main/java/dev/mucks/mc_wallet/mixin/: ExampleMixin.java
mc-wallet-fabric/src/main/resources/: fabric.mod.json  mc-wallet.mixins.json
mc-wallet-lib/: settings.gradle
mc-wallet-lib-rs/: Cargo.toml
mc-wallet-lib-rs/src/: account.rs  coin_type.rs  crypto.rs  java.rs  lib.rs  state.rs  storage.rs  util.rs  wallet.rs
mc-wallet-lib/lib/src/main/java/dev/mucks/mc_wallet_lib/: Account.java  CoinType.java  McWalletLib.java
mc-wallet-lib/lib/src/test/java/dev/mucks/mc_wallet_lib/: LibraryTest.java  McWalletLibTest.java
