[package]
name = "mc-wallet-lib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21"
rand_core = { version = "0.6", features = ["std"] }
bip32 = "0.5.0"
dirs = "5.0"
anyhow = "1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16.20"
rand = "0.8.5"


[lib]
crate_type = ["cdylib"]
